src/test/deca/context/invalid/homemade/bad_method_redefinition_type.deca
// trying to wrongly redefine method

class A {
    int x(float y) { return 3; }
}

class B extends A {
    float x(float y) { return y; }
}